crux-llvm/test-data/golden/golden/double_free.good
????
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/golden/double_free.c:16:3: error: in main
[Crux]   Undefined behavior encountered
[Crux]   Details:
[Crux]     `free` called on a pointer to already-freed memory
[Crux]     Pointer: (10, 0x0:[64])
[Crux]     Reference: 
[Crux]       The C language standard, version C11
[Crux]       §7.22.3.3 The free function, ¶2
[Crux]       Document URL: http://www.iso-9899.info/n1570.html
[Crux]     in context:
[Crux]       main
[Crux] Overall status: Invalid.
